--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-server.port=8080
+#server.port=8080
+#spring.datasource.url=jdbc:h2:file:/tmp/posejdon
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sda
+#spring.datasource.password=sda
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization: true
+spring.jpa.hibernate.ddl-auto=update
